...
                
                VStack(spacing:15){
                    HStack{
                        Text("HealthApp")
                            .font(.system(size: 40,weight: .bold ,design: .serif))
                            .foregroundColor(.white)
                            .accessibilityIdentifier("Menu")
                        
                        Spacer()
                        
                        Button(action:{
                            showingProfile.toggle()
                        }){
                            Image(currentUser.user!.image)
                                .resizable()
                        }
                        .buttonStyle(CircleImageButton())
                        .accessibilityIdentifier("ProfileButton")
                        .sheet(isPresented: $showingProfile){
                            ProfileView()
                        }
                        
                    }
                    ScrollView(showsIndicators: false){
...
