...
                            }.buttonStyle(CustomButton())
                            
                            Button("Wyloguj się"){
                                loggedOut.toggle()
                                dismiss()
                            }.buttonStyle(CustomButton())
                                .accessibilityIdentifier("SignOutButton")
                        }
                    }
                    
                    Spacer()
                }.preferredColorScheme(.dark)
                    .navigationBarTitle("")
...
